tests/cases/ok/http_get_ok.p4
import http

def main() -> None:
    response: http.Response = http.get("http://127.0.0.1:18765/ok")
    print(response.status)
    print(response.body)
