tests/cases/fail/non_bool_if_condition.p4
def main() -> None:
    if 1:
        print("x")
